[package]
name = "http-health-checker"
version = "0.1.0"
edition = "2021"
authors = ["Halbert Rivera <numberOneProgrammer.email.com>"]
description = "A concurrent HTTP health checker written in Rust"
license = "MIT"
repository = "https://github.com/hrivera88/"

[dependencies]
tokio = { version = "1.0", features = ["full"]}
reqwest = { version = "0.11", features = ["json"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
clap = {version = "4.0", features = ["derive"]}
colored = "2.0"
chrono = { version = "0.4", features = ["serde"]}
anyhow = "1.0"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"